# proto_socket_communication

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  result
app/: client_main.cpp  server_main.cpp
include/: christine.pb.h  client_driver.h  server_driver.h
proto/christine/: christine.pb.cc  christine.pb.h  christine.proto
proto/hytech/: hytech.pb.cc  hytech.pb.h
src/: christine.pb.cc  client.cpp  client_driver.cpp  server.cpp  server_driver.cpp
